--- a/Creature Snap/Packages/manifest.json
+++ b/Creature Snap/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.meta.xr.sdk.all": "72.0.0",
     "com.unity.ai.navigation": "2.0.5",
+    "com.unity.animation.rigging": "1.3.0",
     "com.unity.collab-proxy": "2.7.1",
     "com.unity.ide.rider": "3.0.31",
     "com.unity.ide.visualstudio": "2.0.22",
