--- a/Creature Snap/Packages/manifest.json
+++ b/Creature Snap/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.meta.movement": "https://github.com/oculus-samples/Unity-Movement.git",
     "com.meta.xr.sdk.all": "72.0.0",
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.ai.navigation": "2.0.5",
     "com.unity.animation.rigging": "1.3.0",
     "com.unity.collab-proxy": "2.7.1",
